--- a/Education.html
+++ b/Education.html
@@ -23,7 +23,7 @@
 
         <div class="navbar navbar-expand-lg navbar-dark fixed-top">
 
-            <a class="navbar-brand" href="intro">SHIVAM</a>
+            <a class="navbar-brand" href="https://spd123.github.io">SHIVAM</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 
