Small Screen bug fixed

--- a/Achievements.html
+++ b/Achievements.html
@@ -119,7 +119,7 @@
 
                 <ul style="margin-bottom: 0px;">
 
-                    <li>Top geek at the campus Institute of Engineering & Technology on GeeksforGeeks.</li>
+                    <li>Top geek at the campus Institute of Engineering and Technology on GeeksforGeeks.</li>
 
                     <li>Stood amongst top 1% participants in the HACKWITHINFI 18 organized by INFOSYS.</li>
 
