--- a/Education.html
+++ b/Education.html
@@ -129,7 +129,7 @@
                 <img class="rounded-circle logo" src="./images/saraswati.png">
 
                 <h1 class="textlogo"> HSC : 90.60%<br><br>
-                    SARASWATI H.S.SCHOOL, PANDHURNA</h1>
+                    SARASWATI H.S.SCHOOL<br> PANDHURNA</h1>
 
             </div>
 
@@ -140,7 +140,7 @@
                 <img class="rounded-circle logo" src="./images/saraswati.png">
 
                 <h1 class="textlogo"> SSC: 90.83% <br><br>
-               SARASWATI H.S.SCHOOL, PANDHURNA</h1>
+               SARASWATI H.S.SCHOOL<br> PANDHURNA</h1>
 
             </div>
 
