Navbar active issue fixed

--- a/Education.html
+++ b/Education.html
@@ -36,11 +36,11 @@
                 <ul class="navbar-nav nav-pills mr-auto">
 
                     <li class="nav-item">
-                        <a class="nav-link active" href="https://spd123.github.io/Introduction">Introduction</a>
+                        <a class="nav-link" href="https://spd123.github.io/Introduction">Introduction</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="https://spd123.github.io/Education">Education</a>
+                        <a class="nav-link active" href="https://spd123.github.io/Education">Education</a>
                     </li>
 
                     <li class="nav-item">
