--- a/Experience.html
+++ b/Experience.html
@@ -36,7 +36,7 @@
                 <ul class="navbar-nav nav-pills mr-auto">
 
                     <li class="nav-item">
-                        <a class="nav-link active" href="https://spd123.github.io/Introduction">Introduction</a>
+                        <a class="nav-link" href="https://spd123.github.io/Introduction">Introduction</a>
                     </li>
 
                     <li class="nav-item">
@@ -52,7 +52,7 @@
                     </li> 
 
                     <li class="nav-item">
-                        <a class="nav-link" href="https://spd123.github.io/Experience">Experience</a>
+                        <a class="nav-link active" href="https://spd123.github.io/Experience">Experience</a>
                     </li>
                     
                     <li class="nav-item">
