--- a/Skills.html
+++ b/Skills.html
@@ -35,7 +35,7 @@
                 <ul class="navbar-nav nav-pills mr-auto">
 
                     <li class="nav-item">
-                        <a class="nav-link active" href="https://spd123.github.io/Introduction">Introduction</a>
+                        <a class="nav-link" href="https://spd123.github.io/Introduction">Introduction</a>
                     </li>
 
                     <li class="nav-item">
@@ -47,7 +47,7 @@
                     </li> 
 
                     <li class="nav-item">
-                        <a class="nav-link" href="https://spd123.github.io/Skills">Skills</a>
+                        <a class="nav-link active" href="https://spd123.github.io/Skills">Skills</a>
                     </li> 
 
                     <li class="nav-item">
