--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <span>I'm</span> 
                     <span style="font-size:calc(5vw + 5vh);">SHIVAM DONGRE</span>
                     <span><br></span>
-                    <span style=" font-size: calc(1.2vw + 2.2vh);">A COMPUTER ENGINEER WHO IS PASSION ABOUT PROBLEM SOLVING AND BREAKING THINGS.</span>
+                    <span style=" font-size: calc(1.2vw + 2.2vh);">A COMPUTER ENGINEER WHO IS PASSIONATE ABOUT PROBLEM SOLVING AND BREAKING THINGS.</span>
                 </p>
             </div>
 
