some meta tags added

--- a/Education.html
+++ b/Education.html
@@ -12,7 +12,12 @@
 
         <link href="https://fonts.googleapis.com/css?family=Shojumaru|Righteous" rel="stylesheet">
 
-        <title>Shivam Dongre</title>
+        <title>Shivam Dongre - Online Portfolio</title>
+        <meta name="author" content="Shivam Dongre">
+        <meta name="description" content="This is my personal online portfolio website.">
+        <meta name="keywords" content="portfolio, software, engineer, shivam, dongre, spd123, skills, experience, education">
+        <meta name="language" content="english">
+        <meta name="og:title" content="Shivam Dongre - Software Engineer Online Portfolio">
 
         <link rel="icon" type="image/png" href="images/shivam.png">
         <link rel="alternate" href="http://spd123.github.io/Education/" hreflang="en" />
