--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </li>
                     
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="https://spd123.github.io/Resume">Resume</a>
+                        <a class="nav-link" target="_blank" href="https://spd123.github.io/Shivam_Dongre_Resume.pdf">Resume</a>
                     </li>
 
                 </ul>
