--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
 
             <div class="intro">
                 <p>
-                    <span>HI THERE!</span>
+                    <span>Hi There!</span>
                     <span><br></span>
                     <span>I'm</span> 
-                    <span style="font-size:calc(5vw + 5vh);">SHIVAM DONGRE</span>
+                    <span style="font-size:calc(5vw + 5vh);">Shivam Dongre</span>
                     <span><br></span>
-                    <span style=" font-size: calc(1.2vw + 2.2vh);">A COMPUTER ENGINEER WHO IS PASSIONATE ABOUT PROBLEM SOLVING AND BREAKING THINGS.</span>
+                    <span style=" font-size: calc(1.2vw + 2.2vh);">A Software Engineer who is passionate about problem solving and breaking things.</span>
                 </p>
             </div>
 
